# ADA2026

.claude/: settings.local.json
lab1/manifests/: prediction-api.deployment.yaml  prediction-ui.deployment.yaml  training-api.deployment.yaml
lab1/manifests_mlapp_with_nfs/: prediction-api.deployment.yaml  training-api.deployment.yaml
lab3/gcfun2/: .env.yaml
lab3/livelab/pipeline_conf/: diabetes_predictor_mlp.yaml  parameters.json
lab3/livelab/trigger-vertext-ai/: .env.yaml  pyproject.toml
lab3/pubsubclients/: consumer.py  create_topic_sub.py  publisher.py
lab4/deliveryservice/: delivery.db  main.py  pyproject.toml
lab4/deliveryservice-bq/resources/: delivery.py
lab4/k8smanifests/: deliveryservice-api.deployment.yaml
lab4/livelab/grpc_inventory_service/: inventory_service_pb2.py  inventory_service_pb2_grpc.py  main.py  pyproject.toml
lab5/livelab/choreography/: docker-compose.yml
lab5/livelab/choreography/user/: pyproject.toml
lab5/livelab/exercises/: gemini_workflow.yaml  mlflow.yaml  order-approval-process-with-refill.yaml
lab5/orderapprovalprocess/: order-approval-complete.yaml  order-approval-part1.yaml  order-approval-part2.yaml  order-approval-part3.yaml
lab5/orderrecordservice/: app.py
lab8/parallel_agent_pattern/parallel_agents/: agents.py
lab9/: pyproject.toml
