[project]
name = "grpc-inventory-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "functions-framework>=3.10.1",
    "google-cloud-aiplatform[pipelines]>=1.140.0",
    "google-cloud-storage>=3.9.0",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "protobuf>=6.33.5",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.41.0",
]
