[project]
name = "user"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "functions-framework>=3.10.1",
    "google-cloud-aiplatform>=1.141.0",
    "google-cloud-pubsub>=2.36.0",
    "google-cloud-storage>=3.9.0",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
